@@ -1,3 +1,8 @@
+2011-01-31  Rik  <octave@nomad.inbox5.com>
+
+	* arpack/src/dseupd.f, arpack/src/sseupd.f: Change GOTO target
+	to eliminate warning about landing on end if.
+
 2011-01-31  John W. Eaton  <jwe@octave.org>
 
 	* arpack/module.mk (EXTRA_DIST): Include arpack/module.mk in the
